--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cheerio": "^1.0.0-rc.12",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "gsap": "^3.11.4",
     "JSONStream": "^1.3.5",
     "mongodb": "^5.0.1",
     "next": "13.1.6",
